src/style.scss
html,
body,
div,
form,
fieldset,
legend,
label {
  margin: 0;
  padding: 0;
}

body {
  background-color: #272727;
  color: #ffffff;
  font-family: 'Arial', sans-serif;
  margin: 0;
}

.message {
  display: table-row;
  width: 100%;

  & > * {
    display: table-cell;
  }

  .message__date {
    font-size: 11px;
    text-align: right;
  }

  .message__bullet {
    padding: 0 8px;
    user-select: none;

    &.message__bullet--has-replies {
      color: #ffff00;
    }

    &:hover {
      cursor: pointer;
      color: #ff0000;
    }
  }

  .message__text {
    font-size: 16px;
  }

  .chat-box {
    position: relative;
    left: -60px;
  }
}

.chat-box {
  .chat-box__list {
    display: table;
    padding-left: 10px;
  }

  .chat-box__form {
    display: flex;
    height: min-content;
  }
}

